--- a/joe.html
+++ b/joe.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="24Ec45tPkVhCfwJHxzj5/pHKiEkMwfHDeGooaH6Wz9lYR1uUo0zN7IyLS6N8BSfgR5HzCD0TDGrvnbkD5ajrTdRgRopPhS7K+Fc1FhRnnzH0WX7klFKuPIrVNCv5BiF+">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Wpfp+zp/K5pvbuNmvsG20VTgTfHQqk0/nGUN0abSntNCstY3floxVDXCMx0cQNFAwK6niplKUKcHBVRvrhZwtygKPwsoSJDhvhs8vAkU7YKBOdHSXYRKdwH95sHmZeqM">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
