create github pages

--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iqYgu86+yPc4oShf51TWQDQqawJwFpQBWCXd+JrMykZXx0yYNLeu2WMgtr+KbtIVmeKQ62rFXQ3aBN10Korj5nbYDoMwOEi6LdE4v3GHlW9G8iUQIXDoRvjrxNAB2R8b">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="43WXQ2O65WnOPUULMgA9raVUTZ+4Cd2cxLjbGBboyyA/LaTgA1xlU/H5eIPshoeQNFXcBQ3Ra6NaXlBxdHLHGVoGVDYAgj/jdv1OKHt0p09/+yRctmzo3vVST0EAvoda">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
