--- a/community.html
+++ b/community.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -244,7 +244,7 @@ Breanna Hardin<br>Cecilia Mende
                         
                 </div>
             </div>
-            <div class="mbr-figure" style="width: 56%;">
+            <div class="mbr-figure" style="width: 54%;">
                     <a href="page9.html"><img src="assets/images/sotw-700x933.jpg" alt="Mobirise" title=""></a>
             </div>
         </div>
