--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="43WXQ2O65WnOPUULMgA9raVUTZ+4Cd2cxLjbGBboyyA/LaTgA1xlU/H5eIPshoeQNFXcBQ3Ra6NaXlBxdHLHGVoGVDYAgj/jdv1OKHt0p09/+yRctmzo3vVST0EAvoda">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ctGpJrY07cedd0RGjUHiy2cijVrPn4IYvi93GgxqiGdIjLYD8XMlSKRVxzWwGPY8yDiYkS82Yr3gWVMl6hcdn8B+GJfYDyb+vlouMydSMHdaWpaFsHYsXH4ccZeGa2bO">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
