--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ctGpJrY07cedd0RGjUHiy2cijVrPn4IYvi93GgxqiGdIjLYD8XMlSKRVxzWwGPY8yDiYkS82Yr3gWVMl6hcdn8B+GJfYDyb+vlouMydSMHdaWpaFsHYsXH4ccZeGa2bO">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rD5GSfF8sUVpo7jS/EMJaxUGWiY2xXIUFGyf8+kZ523/SIS0O8gM7n7mWHu1zetAUp/b921dZshLYONUne7G/WlG2crAiHvgL66n7i5E+vjmG8opb63k4s6eMuDCsd31">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
