--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header9 cid-r6gvUyZZ2D mbr-fullscreen mbr-parallax-background" id="header9-v">
 
     
 
@@ -224,7 +224,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <div data-form-alert="" hidden="">Thank you for subscribing to our newsletter!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3PjyBNeSzpW+YZ5WsM2g7vNKsB/8oPTroGzX8YTA3qzocwAtWR12mP9BrWDQw+iZ5Vl2/rLzUpR5HlzKHd2alPsj2XkThZqbWTKThnAEUlrQISrm5tVrYtFLyqTnHSP0">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="kOWidrcclfWcUpGdkGARnRpFHPkMJl9xH/6vcmN+7I5DCKrrPLZiDO72C4A8yOuTJSeoHyQd8WpZ4+UC4Xa5IxCjxlsDRX3rrP+B3IOV18cypMFnMpk1ifTqc7clgVEn">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-6y">
                         <span class="input-group-btn"><button href="" type="submit" class="btn btn-primary display-4">Subscribe</button></span>
@@ -272,7 +272,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">The insurance experts at Barrett Insurance would love to prepare a proposal for your insurance needs! Please complete the form below and one of our agents will contact you.</div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">The insurance experts at Barrett Insurance would love to prepare a proposal for you. Please complete the form below and one of our agents will contact you.</div>
         </div>
     </div>
 </section>
@@ -295,7 +295,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form! One of our insurance experts will contact you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XGcXtabM8xd7k3VTM0HBSj3yoOBofMColnIaKlzcuS3RcMqhPMeBZc8SfBVfqKkbDAcKnFu8IcTuXmM3dHZN5tqnWemIvY1MsGnfmYfvxGdAWkAB7XBJUQf3yoQMg/+T">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EPFwjcqHE2ZLuNIpI4kYZOXhG8xEbUSpjAUPDOvYbKYOVhKFPXRm7QteMAe7ozUrnaYyjfZRkS9zZLCGFFR+xMxzy0/Oyo651RO6LSPPRbT/LmpgXNHdzEXUGgFDEAm0">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
