--- a/becky.html
+++ b/becky.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wo1lgnu/AjzhuRQA7ecRCOEA4iJVNObOldjhrRUmdGxiTOyF6zSR7Ylr9h0/FEOr0+DPuRGKz652is91AAkg7i9NqTXy9Tjxg/owgZ9JgmUAmMJBAde3364B7vmk3wxz">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2Yh45fGPEAHC0nglpLIxRDn5lmvuRAnF8WU9N3bflXOiwH1G5EDllxwqCoG/D30WXlE4zlsWvdGdwM9uhWZB/ukOGuxSl1HC7rn4NdmJGJxgaa725MOR8IexAtyegIzl">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
