--- a/joe.html
+++ b/joe.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="t3EyYdWS7UJikxz8/KWVy9P6LyxlEOf/hWFX/wfBYrQ4A6hipZgrm/7ByuVAd8XZiy4Abpl0nXGPHNY0PUt95Sdpd6k7bAV+gk5AVD8qkoxpRhnUwucTocZRWPsvcauj">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v5SH/xsRN+PXbUpXEfNng8l/Nr1z+uAW8FMdKIo2EFygbT3qcpZVkEPTxswbHlUwKjoXs2/Vnic15/gK2NIPr7jyESauOGB2RwDCIcM1ZwKrKEAMsIuahx73u0rSHAm0">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
