--- a/doug.html
+++ b/doug.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NPL37nie8F7m6wmlo8xx+WooJrOdflx7NHIDWexWcAsPWIR27LYEsB8fHXf0NR/L4UP26vu5/7bAGnTA5dKvdMon8mFAqaTLvbuQQFmMLmsVVmTfGb7Y4S4edCXnDeFp">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="baX1n3BtU9iWz/YbOfINIa+7hHpB8wKzaw9f83tatl/W3Xm0ArRyynTcSYub1/QcI0RHnE1Y7eHSfWFvIQW0KK3CEK2kQsx+Pt4mMhfZZ37u/03WfyT8T8g/tnQ3QAEJ">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
