--- a/ben.html
+++ b/ben.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mlTnBLgWaW811Y+igRJD6CSxFnF0wbmsEMAg1bgsp7VFOedtLcxkbFEAYvLDsb+w6YKZQxWUejBg4zuNWUPGwGsUKe5aJcOc9RuoIopkwZjYorP0uNLjU6ca47kkpeNP">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pPgb/COLfWbqqkzCMYLFVCxZwIzbEZug7wkZFYOi3Qeh40cNapT5a5jPe2R/EaJgzjxYup66jy8+1VQjfAMOY3WyQby+mx8iGOz41PtYSnZwTrIgJOOecLwc9oKu78h/">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
