--- a/cyndi.html
+++ b/cyndi.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -141,7 +141,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="z5kZLRQKETfXKneY/rMdX1T606UftYw7+pnYR0mTLRDraWK/jwlAD9XNILfYQQABRX8erQco5xHkuZgjg/LeSHUmeeHFfA4/oYM+084H3rfbjZtpzHrlzXE1eJgRYxbt">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JhIA2HHiLkd9mOR+zTlwvfCDfJGMYdevGVRKcBS20gi/FKwBKQBefa7mArEinIfvxznOtV4KpszC2ESOhYBmE+0KTvdG2pbyTcMrvigspjGsPVlWFfaDVfV5zdF6DIwm">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
