--- a/community.html
+++ b/community.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -261,7 +261,7 @@ Breanna Hardin<br>Cecilia Mende
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2018- Barrett Insurance - All Rights Reserved
+                    © Copyright 2019 - Barrett Insurance - All Rights Reserved
                 </p>
             </div>
         </div>
