--- a/newsletter.html
+++ b/newsletter.html
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
+<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header11 cid-re6LsL1tO1" id="header11-6r">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
@@ -307,7 +307,7 @@ This Valentine’s Day?</div></h2>
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2018- Barrett Insurance - All Rights Reserved
+                    © Copyright 2019 - Barrett Insurance - All Rights Reserved
                 </p>
             </div>
         </div>
